--- a/constructors.html
+++ b/constructors.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE!html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -18,4 +18,4 @@
     <!-- include spec files here... -->
     <script src="test/spec/constructorsSpec.js"></script>
   </body>
-</html>
+</html> 
