--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE#html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -26,3 +26,4 @@
     <script src="constructors.js"></script>
   </body>
 </html>
+ 
